<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fourth_layer_Entrance"
    android:background="@color/background">

    <ImageView

        android:id="@+id/imageView10"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:onClick="close"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/ruda"
        android:text="@string/Entrance"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />

    <EditText
        android:id="@+id/email"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        android:fontFamily="@font/ruda"
        app:layout_constraintBottom_toTopOf="@+id/password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

    </EditText>

    <EditText
        android:id="@+id/password"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:fontFamily="@font/ruda"
        android:hint="@string/password"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        app:layout_constraintBottom_toTopOf="@+id/loginBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent">

    </EditText>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="242dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="384dp"
        android:backgroundTint="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/realEntrance"
        android:fontFamily="@font/ruda"
        android:textSize="17sp"/>

    <LinearLayout
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruda"
            android:text="@string/notAcc"
            android:textColor="@color/secondTitle"
            android:layout_marginEnd="5dp">
        </TextView>

        <TextView
            android:id="@+id/go_to_register_activity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/ruda"
            android:onClick="openReg"
            android:text="@string/reg"
            android:textColor="@color/appColor">
        </TextView>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>