<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fourth_layer_money"
    android:background="@color/background">

    <ImageView

        android:id="@+id/imageView10"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="36dp"
        android:onClick="closeCache"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:fontFamily="@font/ruda"
        android:text="@string/giveMoney"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toEndOf="@+id/imageView10"
        app:layout_constraintTop_toTopOf="@+id/imageView10" />


    <EditText
        android:id="@+id/field1"
        android:layout_width="350dp"
        android:layout_height="38dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/radius"
        android:fontFamily="@font/ruda"
        android:inputType="number"
        android:padding="3dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        app:layout_constraintBottom_toTopOf="@+id/field2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/field2"
        android:layout_width="90dp"
        android:layout_height="38dp"
        android:layout_marginStart="7dp"
        android:background="@drawable/radius"
        android:fontFamily="@font/ruda"
        android:inputType="number"
        android:padding="5dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        app:layout_constraintBottom_toBottomOf="@+id/field3"
        app:layout_constraintEnd_toEndOf="@+id/field1"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/field3"
        app:layout_constraintTop_toTopOf="@+id/field3" />

    <EditText
        android:id="@+id/field3"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/radius"
        android:fontFamily="@font/ruda"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        app:layout_constraintBottom_toTopOf="@+id/field4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/field1" />


    <EditText
        android:id="@+id/field3_1"
        android:layout_width="40dp"
        android:layout_height="38dp"
        android:layout_marginBottom="76dp"
        android:background="@drawable/radius"
        android:fontFamily="@font/ruda"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        app:layout_constraintBottom_toTopOf="@+id/field4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.122"
        app:layout_constraintStart_toStartOf="@+id/field1" />

    <EditText
        android:id="@+id/field4"
        android:layout_width="250dp"
        android:layout_height="38dp"
        android:layout_marginBottom="44dp"
        android:background="@drawable/radius"
        android:fontFamily="@font/ruda"
        android:inputType="number"
        android:padding="7dp"
        android:textColor="@color/white"
        android:textColorHint="@color/secondTitle"
        app:layout_constraintBottom_toTopOf="@+id/validate_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.165"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/validate_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="@drawable/radius_button"
        android:text="Проверить значения"
        android:textColor="@color/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ruda"
        android:text="@string/cardNumber"
        android:textColor="@color/secondTitle"
        app:layout_constraintEnd_toEndOf="@+id/field1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/field1"
        app:layout_constraintTop_toBottomOf="@+id/field1" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ruda"
        android:text="@string/Date"
        android:textColor="@color/secondTitle"
        app:layout_constraintEnd_toEndOf="@+id/field3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/field3"
        app:layout_constraintTop_toBottomOf="@+id/field3" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ruda"
        android:text="@string/Sum"
        android:textColor="@color/secondTitle"
        app:layout_constraintEnd_toEndOf="@+id/field4"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/field4"
        app:layout_constraintTop_toBottomOf="@+id/field4" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/ruda"
        android:text="@string/numder3"
        android:textColor="@color/secondTitle"
        app:layout_constraintEnd_toEndOf="@+id/field2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/field2"
        app:layout_constraintTop_toBottomOf="@+id/field2" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Transfer"
        android:fontFamily="@font/ruda_bold"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="@+id/validate_button"
        app:layout_constraintEnd_toEndOf="@+id/validate_button"
        app:layout_constraintStart_toStartOf="@+id/validate_button"
        app:layout_constraintTop_toTopOf="@+id/validate_button" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="/"
        android:textColor="@color/white"
        android:fontFamily="@font/ruda_black"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/textView7"
        app:layout_constraintEnd_toEndOf="@+id/field3_1"
        app:layout_constraintStart_toStartOf="@+id/field3"
        app:layout_constraintTop_toTopOf="@+id/field3_1" />

</androidx.constraintlayout.widget.ConstraintLayout>