<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Second_layer_course"
    android:background="@color/background">


    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_marginStart="28dp"
        android:importantForAccessibility="no"
        android:onClick="close"
        app:layout_constraintBottom_toBottomOf="@+id/imageView2"
        app:layout_constraintEnd_toStartOf="@+id/imageView2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/imageView2"
        app:srcCompat="@drawable/back" />

    <ImageView
        android:id="@+id/bg2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_marginBottom="152dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/gradient_5" />

    <TextView
        android:id="@+id/courseLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/ruda_bold"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="@+id/textView23"
        app:layout_constraintTop_toBottomOf="@+id/textView23">

    </TextView>

    <TextView
            android:id="@+id/courseSale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toStartOf="@+id/textView24"
            app:layout_constraintTop_toBottomOf="@+id/textView24">

        </TextView>

    <TextView
        android:id="@+id/textView23"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="64dp"
        android:fontFamily="@font/ruda_bold"
        android:text="@string/courseLevel"
        android:textColor="@color/white"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/bg2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/bg2"
        app:layout_constraintVertical_bias="0.26"></TextView>

    <TextView
            android:id="@+id/textView24"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="120dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/sale"
            android:textColor="@color/white"
            android:textSize="15sp"
            app:layout_constraintStart_toEndOf="@+id/textView23"
            app:layout_constraintTop_toTopOf="@+id/textView23"></TextView>

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="128dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8"
            app:srcCompat="@drawable/starwhite" />

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="145dp"
            android:layout_height="64dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="20dp"
            android:contentDescription="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/balance" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/byn"
            android:textColor="@color/white"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="@+id/imageView8"
            app:layout_constraintEnd_toEndOf="@+id/imageView8"
            app:layout_constraintStart_toStartOf="@+id/imageView8"
            app:layout_constraintTop_toTopOf="@+id/imageView8" />

        <TextView
            android:id="@+id/bg1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="44dp"
            android:fontFamily="@font/ruda_bold"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:padding="5px"
            android:background="@drawable/gradient_5"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView8"
            android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/textView25"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:text="@string/common_google_play_services_notification_channel_name"
        android:padding="10dp"
        android:fontFamily="@font/ruda"
        android:textColor="@color/white"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/bg2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg1" />

    <ImageView
        android:id="@+id/imageView15"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bg2"
        app:srcCompat="@drawable/button_buy" />

    <TextView
        android:id="@+id/textView26"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/buy"
        android:textColor="@color/white"
        android:fontFamily="@font/ruda"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="@+id/imageView15"
        app:layout_constraintEnd_toEndOf="@+id/imageView15"
        app:layout_constraintStart_toStartOf="@+id/imageView15"
        app:layout_constraintTop_toTopOf="@+id/imageView15" />


</androidx.constraintlayout.widget.ConstraintLayout>