<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="250dp"
        android:layout_height="300dp"
        android:layout_margin="10sp"
        app:cardCornerRadius="20dp"
        android:layout_marginEnd="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/courseBg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/gradient_2"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseTitle"
                    android:layout_width="197dp"
                    android:layout_height="100dp"
                    android:layout_margin="5dp"
                    android:fontFamily="@font/ruda_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="25sp">

                </TextView>

                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="5dp"
                    android:contentDescription="@string/app_name"
                    app:srcCompat="@drawable/starwhite" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseData"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="@color/background"
                    android:fontFamily="@font/ruda"
                    android:gravity="center_vertical"
                    android:padding="5dp"
                    android:text="@string/app_name"
                    android:textColor="#FFFFFF"
                    android:textColorHighlight="@color/red"
                    android:textColorHint="#C2185B"
                    android:textSize="10sp"
                    android:shadowColor="@color/white"
                    android:shadowRadius="4">

                </TextView>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:fontFamily="@font/ruda_bold"
                    android:text="@string/courseLevel"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="70sp"
                    android:fontFamily="@font/ruda_bold"
                    android:text="@string/sale"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5sp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/courseLevel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:fontFamily="@font/ruda_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                </TextView>

                <TextView
                    android:id="@+id/courseSale"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="35dp"
                    android:fontFamily="@font/ruda_bold"
                    android:text="@string/app_name"
                    android:textColor="@color/white"
                    android:textSize="15sp">

                </TextView>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>